--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,9 @@
-version: "3"
+version: '3'
 services:
-  my-app:
-    image: 211125323771.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
-    ports:
-      - 3000:3000
-
+  # my-app:
+  # image: ${docker-registry}/my-app:1.0
+  # ports:
+  # - 3000:3000
   mongodb:
     image: mongo
     ports:
@@ -14,10 +13,20 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
       - mongo-data:/data/db
-
   mongo-express:
     image: mongo-express
     restart: always
+    ports:
+      - 8080:8081
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=password
+      - ME_CONFIG_MONGODB_SERVER=mongodb
+    depends_on:
+      - "mongodb"
+volumes:
+  mongo-data:
+    driver: local
     ports:
       - 8080:8081
     environment:
